Finish draft. Updated to reflect suggestions.

--- a/RAL/RAL_technical_report/refs.bib
+++ b/RAL/RAL_technical_report/refs.bib
@@ -342,5 +342,5 @@
 	author	= "S. Jackson",
 	title	= "VESUVIO Data Reduction and Analysis in Mantid",
 	year	= "2014",
-	note	= "Unpublished report. Draft pending submission",
+	note	= "Unpublished report.",
 }
