Update with last minute corrections

--- a/RAL/RAL_technical_report/refs.bib
+++ b/RAL/RAL_technical_report/refs.bib
@@ -44,12 +44,6 @@
     number	= "RAL-TR-96-006",
 }
 
-@manual{wshowells1996,
-	author = "W.S. Howells",
-	title  = "IDA - IRIS Data Analysis",
-	year	   = "1996",
-}
-
 @manual{pradaelli2000ariel,
 	author = "P. G. Radaelli",
 	title  = "ARIEL Manual",
@@ -317,17 +311,6 @@
   publisher={Elsevier}
 }
 
-@article{colognesi2002tosca,
-  title={TOSCA neutron spectrometer: the final configuration},
-  author={Colognesi, D and Celli, M and Cilloco, F and Newport, RJ and Parker, SF and Rossi-Albertini, V and Sacchetti, F and Tomkinson, J and Zoppi, M},
-  journal={Applied Physics A},
-  volume={74},
-  number={1},
-  pages={s64--s66},
-  year={2002},
-  publisher={Springer}
-}
-
 @article{bowden2000tosca,
   title={The TOSCA incoherent inelastic neutron spectrometer: progress and results},
   author={Bowden, ZA and Celli, M and Cilloco, F and Colognesi, D and Newport, Robert J and Parker, SF and Ricci, FP and Rossi-Albertini, V and Sacchetti, F and Tomkinson, J and others},
@@ -336,6 +319,17 @@
   pages={98--99},
   year={2000},
   publisher={Elsevier}
+}
+
+@article{schooneveld2006foil,
+  title={Foil cycling technique for the VESUVIO spectrometer operating in the resonance detector configuration},
+  author={Schooneveld, E.M. and Mayers, J. and Rhodes, N.J. and Pietropaolo, A. and Andreani, C. and Senesi, R. and Gorini, G. and Perelli-Cippo, E. and Tardocchi, M.},
+  journal={Review of scientific instruments},
+  volume={77},
+  number={9},
+  pages={095103},
+  year={2006},
+  publisher={AIP Publishing}
 }
 
 @unpublished{jackson2014vesuvio,
