Moved iy report to use markdown

--- a/aber/IY_report/refs.bib
+++ b/aber/IY_report/refs.bib
@@ -1,25 +1,25 @@
-@misc{website:isis-website,
-      author = "ISIS Neutron Source.",
-      title = "How ISIS works",
-      month = "May",
-      year = "2014",
-      howpublished = "\url{http://www.isis.stfc.ac.uk/about/how-isis-works6313.html}",
+@misc{isiswebsite2014,
+    author = "ISIS Neutron Source.",
+    title = "How ISIS works",
+    month = "May",
+    year = "2014",
+    howpublished = "\url{http://www.isis.stfc.ac.uk/about/how-isis-works6313.html}",
 }
 
-@misc{website:mantid-website,
-      author = "Mantid Project.",
-      title = "Main Page",
-      month = "May",
-      year = "2014",
-      howpublished = "\url{http://www.mantidproject.org/Main_Page}",
+@misc{mantidwebsite2014,
+    author = "Mantid Project.",
+    title = "Main Page",
+    month = "May",
+    year = "2014",
+    howpublished = "\url{http://www.mantidproject.org/Main_Page}",
 }
 
-@misc{website:msg-website,
-      author = "ISIS Neutron Source",
-      title = "Molecular Spectroscopy Group",
-      month = "May",
-      year = "2014",
-      howpublished = "\url{http://www.isis.stfc.ac.uk/groups/molecular-spectroscopy/molecular-spectroscopy-3384.html}",
+@misc{msgwebsite2014,
+    author = "ISIS Neutron Source",
+    title = "Molecular Spectroscopy Group",
+    month = "May",
+    year = "2014",
+    howpublished = "\url{http://www.isis.stfc.ac.uk/groups/molecular-spectroscopy/molecular-spectroscopy-3384.html}",
 }
 
 @incollection{rpynn2008,
